test/conformance/kuttl/generate/validation/clusterpolicy/permissions/no-permission/02-update-clusterrole.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRole
metadata:
  name: kyverno:background-controller:additional
  labels:
    app.kubernetes.io/component: background-controller
    app.kubernetes.io/instance: kyverno
    app.kubernetes.io/part-of: kyverno
rules:
- apiGroups:
  - '*'
  resources:
  - serviceaccounts
  verbs:
  - create
  - update
  - patch
  - delete
  - get
  - list
