test/conformance/kuttl/generate/validation/clusterpolicy/permissions/no-permission/04-delete.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
delete:
- apiVersion: kyverno.io/v1
  kind: ClusterPolicy
  name: cpol-validate-create-sa-permission
