test/conformance/kuttl/generate/validation/clusterpolicy/permissions/no-permission/05-pass.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
apply:
- policy-with-var.yaml
assert:
- policy-assert.yaml
