test/conformance/kuttl/generate/validation/clusterpolicy/permissions/no-permission/policy-assert.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: cpol-validate-create-sa-permission
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
